--- a/sf-pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/sf-pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,6 +5,23 @@
     <title>Owners</title>
 </head>
 <body>
+<!-- /*@thymesVar id="o" type="com.springpetclinic.data.model.Owner" /*-->
     <h1 th:text="'List of owners'">List of owners</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="o: ${owners}">
+                <td th:text="${o.id}"></td>
+                <td th:text="${o.firstName}"></td>
+                <td th:text="${o.lastName}"></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
