--- a/sf-pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/sf-pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>Owners</title>
@@ -7,12 +7,12 @@
 <body>
 <!-- /*@thymesVar id="o" type="com.springpetclinic.data.model.Owner" /*-->
     <h1 th:text="'List of owners'">List of owners</h1>
-    <table>
+    <table class="table table-striped">
         <thead>
             <tr>
-                <th>ID</th>
-                <th>First Name</th>
-                <th>Last Name</th>
+                <th style="width: 150px">ID</th>
+                <th style="width: 150px">First Name</th>
+                <th style="width: 150px">Last Name</th>
             </tr>
         </thead>
         <tbody>
