--- a/sf-pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/sf-pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
     <meta charset="UTF-8">
     <title>Vets</title>
@@ -7,12 +7,12 @@
 <body>
 <!-- /*@thymesVar id="v" type="com.springpetclinic.data.model.Vet" */-->
     <h1 th:text="'List of vets'">List of vets</h1>
-    <table>
+    <table class="table table-striped">
         <thead>
         <tr>
-            <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
+            <th style="width: 150px">ID</th>
+            <th style="width: 150px">First Name</th>
+            <th style="width: 150px">Last Name</th>
         </tr>
         </thead>
         <tbody>
