--- a/sf-pet-clinic-web/src/main/resources/templates/pets/createOrUpdateFormVisit.html
+++ b/sf-pet-clinic-web/src/main/resources/templates/pets/createOrUpdateFormVisit.html
@@ -20,7 +20,7 @@
     </tr>
     </thead>
     <tr>
-        <td th:text="${pet.name}" /></td>
+        <td th:text="${pet?.name}" /></td>
         <td th:text="${#temporals.format(pet.birthDate, 'yyyy-MM-dd')}" /></td>
         <td th:text="${pet.type.name}" /></td>
         <td th:text="${pet.owner?.firstName + ' ' + pet.owner?.lastName}" /></td>
@@ -51,7 +51,7 @@
         <th>Description</th>
     </tr>
     <tr th:if="${!visit['new']}" th:each="visit : ${pet.visits}">
-        <td th:text="${#temporals.format(visit.date, 'yyyy-MM-dd')}" /></td>
+        <td th:text="${#temporals.format(visit.date, 'yyyy-MM-dd/HH::mm::ss')}" /></td>
         <td th:text=" ${visit.description}" /></td>
     </tr>
 </table>
